cmake_minimum_required(VERSION 3.6)
project(santa_test)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        New_code/Recv_code/app_monitor/main.c
        New_code/Recv_code/app_monitor/main_buffered.c
        New_code/Recv_code/app_phaser/antenna_driver.h
        New_code/Recv_code/app_phaser/driver_phaser.c
        New_code/Recv_code/app_phaser/driver_phaserTx.c
        New_code/Recv_code/app_phaser/driver_santa.c
        New_code/Recv_code/app_phaser/driver_telosb.c
        New_code/Recv_code/app_phaser/main.c
        New_code/Recv_code/app_stepper/main.c
        New_code/Recv_code/app_stepper/stepper.c
        New_code/Recv_code/app_stepper/stepper.h
        New_code/Recv_code/phaser_msg.h
        New_code/src/app_monitor/main.c
        New_code/src/app_monitor/main_buffered.c
        New_code/src/app_phaser/antenna_driver.h
        New_code/src/app_phaser/driver_phaser.c
        New_code/src/app_phaser/driver_phaserTx.c
        New_code/src/app_phaser/driver_santa.c
        New_code/src/app_phaser/driver_telosb.c
        New_code/src/app_phaser/main.c
        New_code/src/app_stepper/main.c
        New_code/src/app_stepper/stepper.c
        New_code/src/app_stepper/stepper.h
        New_code/src/phaser_msg.h
        phase-tests/app_monitor/main.c
        phase-tests/app_monitor/main_buffered.c
        phase-tests/app_phaser/antenna_driver.h
        phase-tests/app_phaser/driver_phaser.c
        phase-tests/app_phaser/driver_phaserTx.c
        phase-tests/app_phaser/driver_santa.c
        phase-tests/app_phaser/driver_telosb.c
        phase-tests/app_phaser/main.c
        phase-tests/app_stepper/main.c
        phase-tests/app_stepper/stepper.c
        phase-tests/app_stepper/stepper.h
        phase-tests/phaser_msg.h
        phase-tests-random/app_monitor/main.c
        phase-tests-random/app_monitor/main_buffered.c
        phase-tests-random/app_phaser/antenna_driver.h
        phase-tests-random/app_phaser/driver_phaser.c
        phase-tests-random/app_phaser/driver_phaserTx.c
        phase-tests-random/app_phaser/driver_santa.c
        phase-tests-random/app_phaser/driver_telosb.c
        phase-tests-random/app_phaser/main.c
        phase-tests-random/app_stepper/main.c
        phase-tests-random/app_stepper/stepper.c
        phase-tests-random/app_stepper/stepper.h
        phase-tests-random/phaser_msg.h
        print-pkt-exp-src/app_monitor/main.c
        print-pkt-exp-src/app_monitor/main_buffered.c
        print-pkt-exp-src/app_phaser/antenna_driver.h
        print-pkt-exp-src/app_phaser/driver_phaser.c
        print-pkt-exp-src/app_phaser/driver_phaserTx.c
        print-pkt-exp-src/app_phaser/driver_santa.c
        print-pkt-exp-src/app_phaser/driver_telosb.c
        print-pkt-exp-src/app_phaser/main.c
        print-pkt-exp-src/app_stepper/main.c
        print-pkt-exp-src/app_stepper/stepper.c
        print-pkt-exp-src/app_stepper/stepper.h
        print-pkt-exp-src/phaser_msg.h
        Recv_src/app_monitor/main.c
        Recv_src/app_monitor/main_buffered.c
        Recv_src/app_phaser/antenna_driver.h
        Recv_src/app_phaser/driver_phaser.c
        Recv_src/app_phaser/driver_phaserTx.c
        Recv_src/app_phaser/driver_santa.c
        Recv_src/app_phaser/driver_telosb.c
        Recv_src/app_phaser/main.c
        Recv_src/app_stepper/main.c
        Recv_src/app_stepper/stepper.c
        Recv_src/app_stepper/stepper.h
        Recv_src/phaser_msg.h
        Recv_src_DV/app_monitor/main.c
        Recv_src_DV/app_monitor/main_buffered.c
        Recv_src_DV/app_phaser/antenna_driver.h
        Recv_src_DV/app_phaser/driver_phaser.c
        Recv_src_DV/app_phaser/driver_phaserTx.c
        Recv_src_DV/app_phaser/driver_santa.c
        Recv_src_DV/app_phaser/driver_telosb.c
        Recv_src_DV/app_phaser/main.c
        Recv_src_DV/app_stepper/main.c
        Recv_src_DV/app_stepper/stepper.c
        Recv_src_DV/app_stepper/stepper.h
        Recv_src_DV/phaser_msg.h
        Recv_src_DV_w_Configs/app_monitor/main.c
        Recv_src_DV_w_Configs/app_monitor/main_buffered.c
        Recv_src_DV_w_Configs/app_phaser/antenna_driver.h
        Recv_src_DV_w_Configs/app_phaser/driver_phaser.c
        Recv_src_DV_w_Configs/app_phaser/driver_phaserTx.c
        Recv_src_DV_w_Configs/app_phaser/driver_santa.c
        Recv_src_DV_w_Configs/app_phaser/driver_telosb.c
        Recv_src_DV_w_Configs/app_phaser/main.c
        Recv_src_DV_w_Configs/app_stepper/main.c
        Recv_src_DV_w_Configs/app_stepper/stepper.c
        Recv_src_DV_w_Configs/app_stepper/stepper.h
        Recv_src_DV_w_Configs/phaser_msg.h
        Recv_src_DV_w_Configs_11_7/app_monitor/main.c
        Recv_src_DV_w_Configs_11_7/app_monitor/main_buffered.c
        Recv_src_DV_w_Configs_11_7/app_phaser/antenna_driver.h
        Recv_src_DV_w_Configs_11_7/app_phaser/driver_phaser.c
        Recv_src_DV_w_Configs_11_7/app_phaser/driver_phaserTx.c
        Recv_src_DV_w_Configs_11_7/app_phaser/driver_santa.c
        Recv_src_DV_w_Configs_11_7/app_phaser/driver_telosb.c
        Recv_src_DV_w_Configs_11_7/app_phaser/main.c
        Recv_src_DV_w_Configs_11_7/app_stepper/main.c
        Recv_src_DV_w_Configs_11_7/app_stepper/stepper.c
        Recv_src_DV_w_Configs_11_7/app_stepper/stepper.h
        Recv_src_DV_w_Configs_11_7/phaser_msg.h
        RP_Channel26/app_monitor/main.c
        RP_Channel26/app_monitor/main_buffered.c
        RP_Channel26/app_phaser/antenna_driver.h
        RP_Channel26/app_phaser/driver_phaser.c
        RP_Channel26/app_phaser/driver_phaserTx.c
        RP_Channel26/app_phaser/driver_santa.c
        RP_Channel26/app_phaser/driver_telosb.c
        RP_Channel26/app_phaser/main.c
        RP_Channel26/app_stepper/main.c
        RP_Channel26/app_stepper/stepper.c
        RP_Channel26/app_stepper/stepper.h
        RP_Channel26/phaser_msg.h
        src/app_monitor/main.c
        src/app_monitor/main_buffered.c
        src/app_phaser/antenna_driver.h
        src/app_phaser/driver_phaser.c
        src/app_phaser/driver_phaserTx.c
        src/app_phaser/driver_santa.c
        src/app_phaser/driver_telosb.c
        src/app_phaser/main.c
        src/app_stepper/main.c
        src/app_stepper/stepper.c
        src/app_stepper/stepper.h
        src/phaser_msg.h
        Telosb_Sender_Phaser_Recv_Src/app_monitor/main.c
        Telosb_Sender_Phaser_Recv_Src/app_monitor/main_buffered.c
        Telosb_Sender_Phaser_Recv_Src/app_phaser/antenna_driver.h
        Telosb_Sender_Phaser_Recv_Src/app_phaser/driver_phaser.c
        Telosb_Sender_Phaser_Recv_Src/app_phaser/driver_phaserTx.c
        Telosb_Sender_Phaser_Recv_Src/app_phaser/driver_santa.c
        Telosb_Sender_Phaser_Recv_Src/app_phaser/driver_telosb.c
        Telosb_Sender_Phaser_Recv_Src/app_phaser/main.c
        Telosb_Sender_Phaser_Recv_Src/app_stepper/main.c
        Telosb_Sender_Phaser_Recv_Src/app_stepper/stepper.c
        Telosb_Sender_Phaser_Recv_Src/app_stepper/stepper.h
        Telosb_Sender_Phaser_Recv_Src/phaser_msg.h
        Telosb_Sender_Src/app_monitor/main.c
        Telosb_Sender_Src/app_monitor/main_buffered.c
        Telosb_Sender_Src/app_phaser/antenna_driver.h
        Telosb_Sender_Src/app_phaser/driver_phaser.c
        Telosb_Sender_Src/app_phaser/driver_phaserTx.c
        Telosb_Sender_Src/app_phaser/driver_santa.c
        Telosb_Sender_Src/app_phaser/driver_telosb.c
        Telosb_Sender_Src/app_phaser/main.c
        Telosb_Sender_Src/app_stepper/main.c
        Telosb_Sender_Src/app_stepper/stepper.c
        Telosb_Sender_Src/app_stepper/stepper.h
        Telosb_Sender_Src/phaser_msg.h
        Test_1_09192016/app_monitor/main.c
        Test_1_09192016/app_monitor/main_buffered.c
        Test_1_09192016/app_phaser/antenna_driver.h
        Test_1_09192016/app_phaser/driver_phaser.c
        Test_1_09192016/app_phaser/driver_phaserTx.c
        Test_1_09192016/app_phaser/driver_santa.c
        Test_1_09192016/app_phaser/driver_telosb.c
        Test_1_09192016/app_phaser/main.c
        Test_1_09192016/app_stepper/main.c
        Test_1_09192016/app_stepper/stepper.c
        Test_1_09192016/app_stepper/stepper.h
        Test_1_09192016/phaser_msg.h
        Test_1_Channel_11_09222016/app_monitor/main.c
        Test_1_Channel_11_09222016/app_monitor/main_buffered.c
        Test_1_Channel_11_09222016/app_phaser/antenna_driver.h
        Test_1_Channel_11_09222016/app_phaser/driver_phaser.c
        Test_1_Channel_11_09222016/app_phaser/driver_phaserTx.c
        Test_1_Channel_11_09222016/app_phaser/driver_santa.c
        Test_1_Channel_11_09222016/app_phaser/driver_telosb.c
        Test_1_Channel_11_09222016/app_phaser/main.c
        Test_1_Channel_11_09222016/app_stepper/main.c
        Test_1_Channel_11_09222016/app_stepper/stepper.c
        Test_1_Channel_11_09222016/app_stepper/stepper.h
        Test_1_Channel_11_09222016/phaser_msg.h
        Test_1_Channel_11_09232016/app_monitor/main.c
        Test_1_Channel_11_09232016/app_monitor/main_buffered.c
        Test_1_Channel_11_09232016/app_phaser/antenna_driver.h
        Test_1_Channel_11_09232016/app_phaser/driver_phaser.c
        Test_1_Channel_11_09232016/app_phaser/driver_phaserTx.c
        Test_1_Channel_11_09232016/app_phaser/driver_santa.c
        Test_1_Channel_11_09232016/app_phaser/driver_telosb.c
        Test_1_Channel_11_09232016/app_phaser/main.c
        Test_1_Channel_11_09232016/app_stepper/main.c
        Test_1_Channel_11_09232016/app_stepper/stepper.c
        Test_1_Channel_11_09232016/app_stepper/stepper.h
        Test_1_Channel_11_09232016/phaser_msg.h
        Test_2_09192016/app_monitor/main.c
        Test_2_09192016/app_monitor/main_buffered.c
        Test_2_09192016/app_phaser/antenna_driver.h
        Test_2_09192016/app_phaser/driver_phaser.c
        Test_2_09192016/app_phaser/driver_phaserTx.c
        Test_2_09192016/app_phaser/driver_santa.c
        Test_2_09192016/app_phaser/driver_telosb.c
        Test_2_09192016/app_phaser/main.c
        Test_2_09192016/app_stepper/main.c
        Test_2_09192016/app_stepper/stepper.c
        Test_2_09192016/app_stepper/stepper.h
        Test_2_09192016/phaser_msg.h
        test_cases/printf_test/main.c)

add_executable(santa_test ${SOURCE_FILES})